--- a/block-BHaaaf/index.html
+++ b/block-BHaaaf/index.html
@@ -1,9 +1,24 @@
 <!-- 
   ### Create a simple page with an external stylesheet.
 
-  TODO:
     - Create a simple page `(index.html)` with one heading following with a long paragraph.
     - Create an external stylesheet `(style.css)` and change the color and font size of the heading and paragraph.
     - Also, change the background color of the body.
     - Use different selectors to select different elements.
 -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta cherset="UTF-8">
+    <title Hello World!></title>
+    <link rel="stylesheet" href="style.css">
+
+    <body>
+        <h1 class="heading">Hello World!</h1>
+        <p id="unique">HTML ussed to add content on a page that provides a very simple structure to our page.
+        </p>
+    </body>
+</head>
+
+</html>
