--- a/block-BHaaag/index.html
+++ b/block-BHaaag/index.html
@@ -16,3 +16,49 @@
     - Wrap the text or word inside `<em></em> or <i></i>` tag to make it italicize.
     - Use `<address></address>` tag for addresses. 
 -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Assinment level2</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<header>
+    <h1>Abhishek Shastri</h1>
+    <p>shastri.256@gmail.com / Dharamsala,India</p>
+</header>
+<section>
+    <h2>Experiance</h2>
+    <h3>Senior Front End Developer</h3>
+    <p>Your job description is the first contact between your company and your new recruit. With millions of people searching for jobs on Indeed each month, a great job description can help you attract the most qualified candidates to your open position.
+        To get you started, here are some tips for creating an effective job description.</p>
+    <h3>Front End Developer</h3>
+    <p>A good job description starts with an attention-grabbing summary of the position and its role within your company. Your summary should provide an overview of your company and expectations for the position. Outline the types of activities and responsibilities
+        required for the job so job seekers can determine if they are qualified, or if the job is suitable for them.</p>
+    <h3>Front End Developer Intern</h3>
+    <p>
+        Front End Developer Senior Front End Developer Front End Developer (with JavaScript proficiency) Front End Developer (Part-Time) Front End Web Developer
+    </p>
+</section>
+<section>
+    <h2>Skills</h2>
+    <p>HTML</p>
+    <p>CSS</p>
+    <p>JavaScript</p>
+    <p>Photoshop</p>
+    <p>React</p>
+    <p>Illustrater</p>
+</section>
+<footer>
+    <h2>Connect</h2>
+    <a href="#">Facebook</a>
+    <a href="#">twitter</a>
+    <a href="#">instagram</a>
+    <a href="#">linkedin</a>
+</footer>
+
+<body>
+</body>
+
+</html>
