--- a/block-BHaaac/index.html
+++ b/block-BHaaac/index.html
@@ -4,3 +4,21 @@
 TODO:
 Make a simple page that prints "Hello World!" in a heading level 1 element, following with a long paragraph. The paragraph can have any text content.
 -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Hello World!</title>
+</head>device-width
+
+<body>
+    <h1>
+        Hello World!
+    </h1>
+    <p>
+        “India is the cradle of the human race, the birthplace of human speech, the mother of history, the grandmother of legend and the great-grandmother of tradition.”
+    </p>
+</body>
+
+</html>
