--- a/block-BHaaai/index.html
+++ b/block-BHaaai/index.html
@@ -1,12 +1,45 @@
-<!-- 
-  ### Create a page according to the design shown below.
+<!DOCTYPE html>
+<html lang="en">
 
-  TODO:
-    - Open this image in a window for the design layout - (https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/introduction/assignment2.png)
-    - Use external stylesheet to style the page.
-    - For applying image use `<img src="" alt="">` tag. 
-      Keep source of the image inside `src=""` attribute. 
-      Put an alternative text of the image inside `alt=""` attribute. 
-      You can can also apply width and height to the image by applying `width="" and height=""` attribute inside image tag. for example - `<img src="suraj.jpg" alt="suraj" width="200" height="200">`
-    - For centering the element apply `text-align: center`, to the parent of the element in CSS. 
--->
+<head>
+    <meta charset="UTF-8">
+    <title>Assinment level2</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header class="header">
+        <img src="../IMG123.jpg" class="logo" alt="">
+        <h1>Abhishek Shastri</h1>
+        <p>shastri.256@gmail.com / Dharamsala,India</p>
+    </header>
+    <header>
+        <h2>Experiance</h2>
+        <h3>Senior Front End Developer</h3>
+        <p>Your job description is the first contact between your company and your new recruit. With millions of people searching for jobs on Indeed each month, a great job description can help you attract the most qualified candidates to your open position.
+            To get you started, here are some tips for creating an effective job description.</p>
+        <h3>Front End Developer</h3>
+        <p>A good job description starts with an attention-grabbing summary of the position and its role within your company. Your summary should provide an overview of your company and expectations for the position. Outline the types of activities and responsibilities
+            required for the job so job seekers can determine if they are qualified, or if the job is suitable for them.</p>
+        <h3>Front End Developer Intern</h3>
+        <p>Front End Developer Senior Front End Developer Front End Developer (with JavaScript proficiency) Front End Developer (Part-Time) Front End Web Developer
+        </p>
+    </header>
+    <section>
+        <h2>Skills</h2>
+        <p>HTML</p>
+        <p>CSS</p>
+        <p>JavaScript</p>
+        <p>Photoshop</p>
+        <p>React</p>
+        <p>Illustrater</p>
+    </section>
+    <footer class="footer">
+        <a href="#">Facebook</a>
+        <a href="#">twitter</a>
+        <a href="#">instagram</a>
+        <a href="#">linkedin</a>
+    </footer>
+</body>
+
+</html>
