--- a/block-BHaaai/index.html
+++ b/block-BHaaai/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-        <img src="../IMG123.jpg" class="logo" alt="">
+        <img src="./IMG123.jpg" class="logo" alt="">
         <h1>Abhishek Shastri</h1>
         <p>shastri.256@gmail.com / Dharamsala,India</p>
     </header>
